--- a/views/articleDetail.hbs
+++ b/views/articleDetail.hbs
@@ -7,6 +7,8 @@
 <br>
 <h3>{{ description }}</h3>
 <br>
-<h3><a href='/articles/:title/edit?_method=PUT'>EDIT ARTICLE</a></h3>
+<h3><a href='/articles/{{title}}/edit'>EDIT ARTICLE</a></h3>
+<br>
+<h3><a href='/articles/{{title}}/delete'>DELETE ARTICLE</a></h3>
 <br>
 <h3><a href='/articles'>BACK TO ARTICLES</a></h3>
