Added Updating Password and Logout

--- a/views/articleForm.hbs
+++ b/views/articleForm.hbs
@@ -15,3 +15,6 @@
   <input type="submit" value="Submit">
 </form>
 <br> {{> footer}}
+<br>
+<h3><a href='/settings'>SETTINGS</a></h3>
+<h3><a href='/logout'>LOGOUT</a></h3>
