--- a/views/productDetail.hbs
+++ b/views/productDetail.hbs
@@ -12,3 +12,6 @@
 <h3><a href='/products/{{id}}/delete'>DELETE PRODUCT</a></h3>
 <br>
 <h3><a href='/products'>BACK TO PRODUCTS</a></h3>
+<br>
+<h3><a href='/settings'>SETTINGS</a></h3>
+<h3><a href='/logout'>LOGOUT</a></h3>
