--- a/views/products.hbs
+++ b/views/products.hbs
@@ -7,3 +7,6 @@
 <br>
 <h3><a href='/products/new'>NEW PRODUCT</a></h3>
 <h3><a href='/'>HOME</a></h3>
+<br>
+<h3><a href='/settings'>SETTINGS</a></h3>
+<h3><a href='/logout'>LOGOUT</a></h3>
