--- a/views/articleDetail.hbs
+++ b/views/articleDetail.hbs
@@ -12,3 +12,6 @@
 <h3><a href='/articles/{{title}}/delete'>DELETE ARTICLE</a></h3>
 <br>
 <h3><a href='/articles'>BACK TO ARTICLES</a></h3>
+<br>
+<h3><a href='/settings'>SETTINGS</a></h3>
+<h3><a href='/logout'>LOGOUT</a></h3>
