--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,3 +2,7 @@
 <br>
 <br>
 <h1><a href='/articles'>Articles</a></h1>
+<br><br>
+<br>
+<h3><a href='/settings'>SETTINGS</a></h3>
+<h3><a href='/logout'>LOGOUT</a></h3>
