--- a/views/updateArticle.hbs
+++ b/views/updateArticle.hbs
@@ -17,3 +17,6 @@
 <h3><a href='/articles'>BACK TO ARTICLES</a></h3>
 <br>
 {{> footer }}
+<br>
+<h3><a href='/settings'>SETTINGS</a></h3>
+<h3><a href='/logout'>LOGOUT</a></h3>
