--- a/views/updateProduct.hbs
+++ b/views/updateProduct.hbs
@@ -18,3 +18,6 @@
 <h3><a href='/products'>BACK TO PRODUCTS</a></h3>
 <br>
 {{> footer }}
+<br>
+<h3><a href='/settings'>SETTINGS</a></h3>
+<h3><a href='/logout'>LOGOUT</a></h3>
